7 January 2008: Wouter
	- Fixup nsec3 tests, they need zonesdir: "." in conf files.
	  The tests pass.
	- configure default is --enable-nsec3. Noted that this takes 20% more
	  memory (for very large zones). Moved tests to test on commit.
	- set RRTYPE numbers for NSEC3=50, NSEC3PARAM=51.
	- fixup checkconf test - updated parser lexer gives syntax error 
	  on some garbage instead of parse error. Parselexer is updated for
	  new options (hide-version, verbosity).
	- removed highrange rrtype code. fixup cutest for that.
	- speedup of prehash code.
		- skip nonexistent domains (operator.example.com).
		- skip only-nsec3 domains (that could be 2x speedup)
		- skip glue nameserver domains (for TLD with 2 glue per
		  delegation this is a 3x speedup).
		- skip the prehash_domain for delegation points, which saves
		  another 2/3 hash operations, 3x speedup.
	- printout how long nsec3 prepare took (verbosity >= 1).

3 December 2007: Matthijs
	- Fixup bug where data related files are looked up in the wrong
	  directory when chrooted with chrootdir ending with a slash.

26 November 2007: Matthijs
	- Fixup bug start nsd while already running: do not initialize server,
	  since it is already running. 

15 November 2007: Matthijs
	- Changed man pages format from mdoc to mansun, to support the Solaris OS. 
	- Better logging for nsd-notify (show 'broken' zone)

13 November 2007: Wouter
	- CREDITS and RELNOTES now in utf-8.

12 November 2007: Matthijs
	- Changed man pages according to bug 162. 

30 October 2007: Wouter
	- Fixup for skip after unknown deleted IXFR RR, otherwise processing
	  would continue at the wrong spot in the packet and process the IXFR
	  as if it were malformed.
	- added unit test for this in long (needs ldns-testns, updated it).
	- added unit test for rollback of malformed zone transfers.
	  Fixup for it, and fixup in ldns-testns to be randomport and
	  copy id for hex packets.

29 October 2007: Wouter