@@ -1,3 +1,12 @@
+8 January 2008: Wouter
+	- no warning about optout records. also no warning about missing
+	  nsec3 records.
+	- check for hash(apex)==nsec3 with SOA bit was done in duplicate.
+	- removed old commented out code
+		- using SOA bit in NSEC3 typemap to detect parameters
+		- using nonhashed NSEC3 to prove qtype=NSEC3 nxdomains
+		- prints for debugging.
+
 7 January 2008: Wouter
 	- Fixup nsec3 tests, they need zonesdir: "." in conf files.
 	  The tests pass.
